--- a/main.tex
+++ b/main.tex
@@ -17,25 +17,19 @@ Instytut Podstaw Informatyki PAN}
 \tytulang{Dependency Length Minimisation in coordinate structures: A corpus study based on \\ Polish Dependency Bank}
 
 \begin{abstract}
-Streszczenie
+Tekst streszczenia
 \end{abstract}
 
 \thispagestyle{empty}
 \setcounter{page}{3}
 \tableofcontents 
 
-\chapter*{Wstęp}
-\addcontentsline{toc}{chapter}{1. Wstęp}
-Wstęp do pracy dyplomowej. Zwykle pisany na końcu i zawierający streszczenie i podsumowanie najważniejszych aspektów i celów pracy.
-\section*{Motywacja i cel pracy}
-\addcontentsline{toc}{section}{1.1. Motywacja i cel pracy}
+\chapter{Wstęp}
+\section{Motywacja i cel pracy}
 Tekst sekcji
-\section*{Zakres i struktura pracy}
-\addcontentsline{toc}{section}{1.2. Zakres i struktura pracy}
+\section{Zakres i struktura pracy}
 Tekst sekcji
 
-
-\setcounter{chapter}{1}
 \chapter{Teoretyczne podstawy minimalizacji długości zależności w strukturach współrzędnie złożonych}
 Tekst rozdziału
 \section{Koordynacja w języku polskim}
