--- a/praca/main.tex
+++ b/praca/main.tex
@@ -57,8 +57,7 @@ Zacznę od przedstawienia pojęcia koordynacji. Koordynacja to zjawisko w język
 Człony koordynacji nazywamy koordynantami, to co je łączy -- spójnikiem koordynacji (w przykładach w tej pracy jest on ilustrowany pogrubionym tekstem), a wyraz nadrzędny względem obu członów (jeśli taki istnieje) -- głową koordynacji.
 W podanych wyżej przykładach koordynantami są: (1a, 1b) Ania, Julia; (1c) Wesoła Marysia, smutny Janek; (1d) zjadł obiad, poszedł spać. Głową koordynacji w (1a) jest idą, w (1c) wybrali się, a w (1d) Kuba. W (1b) nie ma głowy koordynacji.
 
-Ze względów semantycznych zwykle wyróżnia się cztery rodzaje koordynacji: koordynacje koniunkcyjne (2a), koordynacje dysjunkcyjne (2b), koordynacje adwersatywne (2c) oraz koordynacje kauzalne (2d) \citep{Haspelmath2007}. Każde z nich używają różnych zestawów spójników, które łączą koordynanty. W koordynacjach koniunkcyjnych koordynanty łączą m. in. spójniki [i, oraz, ani, tudzież, również], a w koordynacjach dysjunkcyjnych -- [albo, bądź, lub, czy], lecz w obu tych kategoriach wykorzystywana jest także interpunkcja. W koordynacjach adwersatywnych używamy spójników [ale, lecz, zaś, natomiast, jednak], a w koordynacjach kauzalnych -- [bo, ponieważ, dlatego że].
-\\
+Ze względów semantycznych zwykle wyróżnia się cztery rodzaje koordynacji: koordynacje koniunkcyjne (2a), koordynacje dysjunkcyjne (2b), koordynacje adwersatywne (2c) oraz koordynacje kauzalne (2d) \citep{Haspelmath2007}. Każde z nich używają różnych zestawów spójników, które łączą koordynanty. W koordynacjach koniunkcyjnych koordynanty łączą m. in. spójniki [i, oraz, ani, tudzież, również], a w koordynacjach dysjunkcyjnych -- [albo, bądź, lub, czy], lecz w obu tych kategoriach wykorzystywana jest także interpunkcja. W koordynacjach adwersatywnych używamy m. in. spójników [ale, lecz, zaś, natomiast, jednak], a w koordynacjach kauzalnych -- [bo, ponieważ, dlatego że].
 
 2.
 
@@ -69,20 +68,10 @@ Ze względów semantycznych zwykle wyróżnia się cztery rodzaje koordynacji: k
 (c) Byli ładni, \textbf{ale} głupi.
 
 (d) Nie zrobiłem pracy domowej, \textbf{bo} nie chciałem.
-\\
-\\
-Koordynacje można dzielić również względem ich struktury, na 3 głowne typy i ich podtypy \citep{Haspelmath2007}:\\
 
-3.
-
-(a) asyndetyczne
-\\ \textbf{A B}
-
-(b) monosyndetyczne
-
-(c) bisyndetyczne
 \section{Zarys teorii zależności składniowej}
-Tekst sekcji
+
+
 \section{Minimalizacja długości zależności w koordynacji}
 Tekst sekcji
 \section{Co poszczególne reprezentacje przewidują}
