--- a/praca/main.tex
+++ b/praca/main.tex
@@ -1,7 +1,14 @@
 \documentclass[licencjacka]{pracamgr_Kogni}
 \usepackage{setspace}
-\usepackage{hyperref}
 \usepackage{natbib}
+\usepackage{xcolor}
+\usepackage{hyperref} 
+ \hypersetup{ 
+     colorlinks=true, 
+     linkcolor=black, 
+     citecolor=black,       
+     urlcolor=darkgray, 
+     }
 \onehalfspacing
 \autor{Kamil Tomaszek}{432044}
 \title{Minimalizacja długości zależności w~strukturach współrzędnie złożonych: badanie korpusowe na~podstawie Polish Dependency Bank}
@@ -31,7 +38,12 @@ danych za pomocą algorytmu napisanego w Pythonie. W czwartym rozdziale zaprezen
 W tym rozdziale przedstawiam motywację i cel pracy licencjackiej na temat "Minimalizacja długości zależności w strukturach współrzędnie złożonych: badanie korpusowe na podstawie Polish Dependency Bank", a także omawiam jej zakres oraz strukturę.
 
 \section{Motywacja i cel pracy}
-Praca ta ma na celu analizę zjawiska minimalizacji długości zależności – DLM (z ang. Dependency Length Minimisation), czyli tendencji do umieszczania elementów współrzędnych o różnych długościach w sposób, by zmniejszyć odległość zarówno między nimi samymi, jak i między nimi a innymi elementami zdania, w koordynacjach w języku polskim. Koordynacja to zjawisko, gdy wiele części zdania ma jeden nadrzędnik i każda z nich się z nim koordynuje. Zjawisko to jest istotne dla teorii składniowej i reprezentacji językowych, ponieważ dotyczy zarówno formy jak i znaczenia zdań. W pracy tej sprawdzono dwie hipotezy dotyczące długości członów w koordynacjach w języku polskim: (1) że dłuższy człon koordynacji jest częściej ze strony prawej i (2) że dłuższy człon koordynacji jest częściej dalej od jej nadrzędnika. Szybko pokazano, że jedna z nich zachodzi w większości przypadków, więc następnie omówiono wpływ obecności i pozycji nadrzędnika oraz długości różnicy między analizowanymi członami na proporcje danych, w których hipoteza ta jest prawdziwa. Praca ta ma charakter empiryczny i opiera się na danych pochodzących z Polish Dependency Bank (PDB), czyli korpusu języka polskiego zawierającego ponad 22 tysiące drzew zależnościowych.
+Praca ta ma na celu analizę zjawiska minimalizacji długości zależności – DLM (z ang. Dependency Length Minimisation), czyli tendencji do umieszczania elementów współrzędnych o różnych długościach w sposób, by zmniejszyć odległość zarówno między nimi samymi, jak i między nimi a innymi elementami zdania, w koordynacjach w języku polskim. Koordynacja to zjawisko, gdy wiele części zdania ma jeden nadrzędnik i każda z nich się z nim koordynuje. Zjawisko to jest istotne dla teorii składniowej i reprezentacji językowych, ponieważ dotyczy zarówno formy jak i znaczenia zdań. W pracy tej sprawdzono dwie hipotezy dotyczące długości członów w koordynacjach w języku polskim: 1. że dłuższy człon koordynacji jest częściej ze strony prawej i 2. że dłuższy człon koordynacji jest częściej dalej od jej nadrzędnika.
+\\
+
+(0) \textit{Widziałem} Asię \textbf{i} jej śmiesznego, młodszego brata. \\
+\\
+Długości członów mierzono na cztery różne sposoby, licząc znaki, sylaby, słowa oraz tokeny. W przykładzie (0) odpowiednie wartości wynosiłyby [4~vs~31, 2~vs~9, 1~vs~4, 1~vs~5]. Szybko pokazano, że jedna z hipotez zachodzi w większości przypadków, więc następnie omówiono wpływ obecności i pozycji nadrzędnika oraz długości różnicy między analizowanymi członami na proporcje danych, w których hipoteza ta jest prawdziwa. Praca ta ma charakter empiryczny, opiera się na danych pochodzących z Polish Dependency Bank (PDB), czyli korpusu języka polskiego zawierającego ponad 22 tysiące drzew zależnościowych oraz na podobnej pracy badającej te same zależności, ale dla języka angielskiego \citep{AnonimoweNieopublikowane}.
 
 \section{Zakres i struktura pracy}
 Praca składa się z sześciu rozdziałów. W rozdziale drugim omówiono teoretyczne podstawy pracy, tj. reprezentacje koordynacji w języku polskim, teorię zależności składniowej i DLM w koordynacji. W rozdziale trzecim opisano źródło danych, czyli Polish Dependency Bank, jak i ich preprocessing -- działanie algorytmu, napisanego w języku Python, wybierającego koordynacje oraz informacje o nich z PDB, a także pokazano format danych po preprocessingu w pliku z rozszerzeniem ".csv". W rozdziale czwartym zaprezentowano hipotezy badawcze, ich testowanie oraz analizy statystyczne w R, między innymi test Wilcoxona, testy chi-kwadrat oraz ogólne modele liniowe (GLM – z ang. Generalised Linear Models). W rozdziale piątym omówiono wyniki badań i ich interpretację w kontekście istniejącej wcześniej literatury naukowej. W rozdziale szóstym podsumowano pracę, wyciągnięto z niej wnioski oraz zaproponowano perspektywy dalszych badań. 
@@ -43,31 +55,32 @@ W tym rozdziale omawiam teoretyczne podstawy pracy, tj. reprezentacje koordynacj
 Zacznę od przedstawienia pojęcia koordynacji. Koordynacja to zjawisko w językach naturalnych, które zachodzi w struktruach złożonych -- zarówno współrzędnie, jak i podrzędnie. Polega na zestawieniu dwóch lub więcej elementów o tej samej funkcji składniowej za pomocą spójników lub interpunkcji i tym samym złączenie ich w jeden, większy element, zachowujący te same funkcje składniowe. Jest ono jednym z podstawowych sposobów łączenia słów, czy zdań. Elementami koordynacji mogą być zarówno pojedyncze słowa (1a, 1b),  wyrażenia (1c), jak i całe zdania (1d):
 \\
 
-1.
+(1)
 
-(a) Ania \textbf{i} Julia idą na spacer.
+a. Ania \textbf{i} Julia \textit{idą} na spacer.
 
-(b) Ania \textbf{i} Julia.
+b. Ania \textbf{i} Julia.
 
-(c) Wesoła Marysia \textbf{oraz} smutny Janek wybrali się do parku.
+c. Wesoła Marysia \textbf{oraz} smutny Janek \textit{wybrali się} do parku.
 
-(d) Kuba zjadł obiad \textbf{a} następnie poszedł spać.
+d. \textit{Kuba} zjadł obiad \textbf{a} następnie poszedł spać.
 \\
 \\
-Człony koordynacji nazywamy koordynantami, to co je łączy -- spójnikiem koordynacji (w przykładach w tej pracy jest on ilustrowany pogrubionym tekstem), a wyraz nadrzędny względem obu członów (jeśli taki istnieje) -- głową koordynacji.
-W podanych wyżej przykładach koordynantami są: (1a, 1b) Ania, Julia; (1c) Wesoła Marysia, smutny Janek; (1d) zjadł obiad, poszedł spać. Głową koordynacji w (1a) jest idą, w (1c) wybrali się, a w (1d) Kuba. W (1b) nie ma głowy koordynacji.
+Człony koordynacji nazywamy koordynantami, to co je łączy -- spójnikiem koordynacji (w przykładach w tej pracy jest on ilustrowany pogrubionym tekstem), a wyraz nadrzędny względem obu członów -- głową koordynacji (w przykładach ilustrowany kursywą). Jak widać w (1b) nie zawsze istnie jengłowa koordynacji.
+W podanych wyżej przykładach koordynantami są: (1a, 1b) Ania, Julia; (1c) Wesoła Marysia, smutny Janek; (1d) zjadł obiad, poszedł spać.
 
 Ze względów semantycznych zwykle wyróżnia się cztery rodzaje koordynacji: koordynacje koniunkcyjne (2a), koordynacje dysjunkcyjne (2b), koordynacje adwersatywne (2c) oraz koordynacje kauzalne (2d) \citep{Haspelmath2007}. Każde z nich używają różnych zestawów spójników, które łączą koordynanty. W koordynacjach koniunkcyjnych koordynanty łączą m. in. spójniki [i, oraz, ani, tudzież, również], a w koordynacjach dysjunkcyjnych -- [albo, bądź, lub, czy], lecz w obu tych kategoriach wykorzystywana jest także interpunkcja. W koordynacjach adwersatywnych używamy m. in. spójników [ale, lecz, zaś, natomiast, jednak], a w koordynacjach kauzalnych -- [bo, ponieważ, dlatego że].
+\\
 
-2.
+(2)
 
-(a) Marta zjadła jabłko \textbf{i} gruszkę.
+a. Marta \textit{zjadła} jabłko \textbf{i} gruszkę.
 
-(b) Ona miała szesnaście \textbf{lub} siedemnaście lat.
+b. Ona miała szesnaście \textbf{lub} siedemnaście \textit{lat}.
 
-(c) Byli ładni, \textbf{ale} głupi.
+c. \textit{Byli} ładni, \textbf{ale} głupi.
 
-(d) Nie zrobiłem pracy domowej, \textbf{bo} nie chciałem.
+d. Nie zrobiłem pracy domowej, \textbf{bo} nie chciałem.
 
 \section{Zarys teorii zależności składniowej}
 
@@ -113,6 +126,9 @@ Tekst sekcji
 
 \begin{thebibliography}{99}
 \addcontentsline{toc}{chapter}{Bibliografia}
+
+\bibitem [Anonimowe Zgłoszenie na ACL(nieopublikowane)]{AnonimoweNieopublikowane}
+Anonimowe Zgłoszenie na ACL 2023 (nieopublikowane) Conjunct Lengths in English, Dependency Length Minimization, and Dependency Structure of Coordination
 
 \bibitem [Haspelmath(2007)]{Haspelmath2007}
 Haspelmath, M. (2007) Coordination, \textit{Language Typology and Syntactic Description, Volume II: Complex constructions}, 1-51
