--- a/praca/main.tex
+++ b/praca/main.tex
@@ -66,7 +66,7 @@ c. Wesoła Marysia \textbf{oraz} smutny Janek \textit{wybrali się} do parku.
 d. \textit{Kuba} zjadł obiad \textbf{a} następnie poszedł spać.
 \\
 \\
-Człony koordynacji nazywamy koordynantami, to co je łączy -- spójnikiem koordynacji (w przykładach w tej pracy jest on ilustrowany pogrubionym tekstem), a wyraz nadrzędny względem obu członów -- głową koordynacji (w przykładach ilustrowany kursywą). Jak widać w (1b) nie zawsze istnie jengłowa koordynacji.
+Człony koordynacji nazywamy koordynantami, to co je łączy -- spójnikiem koordynacji (w przykładach w tej pracy jest on ilustrowany pogrubionym tekstem), a wyraz nadrzędny względem obu członów -- głową koordynacji (w przykładach ilustrowany kursywą). Jak widać w (1b) nie zawsze istnieje głowa koordynacji.
 W podanych wyżej przykładach koordynantami są: (1a, 1b) Ania, Julia; (1c) Wesoła Marysia, smutny Janek; (1d) zjadł obiad, poszedł spać.
 
 Ze względów semantycznych zwykle wyróżnia się cztery rodzaje koordynacji: koordynacje koniunkcyjne (2a), koordynacje dysjunkcyjne (2b), koordynacje adwersatywne (2c) oraz koordynacje kauzalne (2d) \citep{Haspelmath2007}. Każde z nich używają różnych zestawów spójników, które łączą koordynanty. W koordynacjach koniunkcyjnych koordynanty łączą m. in. spójniki [i, oraz, ani, tudzież, również], a w koordynacjach dysjunkcyjnych -- [albo, bądź, lub, czy], lecz w obu tych kategoriach wykorzystywana jest także interpunkcja. W koordynacjach adwersatywnych używamy m. in. spójników [ale, lecz, zaś, natomiast, jednak], a w koordynacjach kauzalnych -- [bo, ponieważ, dlatego że]. W tej pracy skupię się na pierwszych trzech rodzajach koordynacji, jako że to one występują w strukturach współrzędnie złożonych.
