--- a/praca/main.tex
+++ b/praca/main.tex
@@ -46,7 +46,7 @@ Praca ta ma na celu analizę zjawiska minimalizacji długości zależności – 
 Długości członów mierzono na cztery różne sposoby, licząc znaki, sylaby, słowa oraz tokeny. W przykładzie (0) odpowiednie wartości wynosiłyby [4~vs~31, 2~vs~9, 1~vs~4, 1~vs~5]. Szybko pokazano, że jedna z hipotez zachodzi w większości przypadków, więc następnie omówiono wpływ obecności i pozycji nadrzędnika oraz długości różnicy między analizowanymi członami na proporcje danych, w których hipoteza ta jest prawdziwa. Praca ta ma charakter empiryczny, opiera się na danych pochodzących z Polish Dependency Bank (PDB), czyli korpusu języka polskiego zawierającego ponad 22 tysiące drzew zależnościowych oraz na podobnej pracy badającej te same zależności, ale dla języka angielskiego \citep{AnonimoweNieopublikowane}.
 
 \section{Zakres i struktura pracy}
-Praca składa się z sześciu rozdziałów. W rozdziale drugim omówiono teoretyczne podstawy pracy, tj. przedstawiono czym są koordynacje -- na przykładzie języka polskiego, zaprezentowano zarys teorii zależności składniowej, opisano minimalizację teorii zależności oraz wskazano różne reprezentacje zależnościowe wraz z ich przewidywaniami. W rozdziale trzecim opisano źródło danych, czyli Polish Dependency Bank, jak i ich preprocessing -- działanie algorytmu, napisanego w języku Python, wybierającego koordynacje oraz informacje o nich z PDB, a także pokazano format danych po preprocessingu w pliku z rozszerzeniem ".csv". W rozdziale czwartym zaprezentowano hipotezy badawcze, ich testowanie wraz z analizami statystycznymi w języku R (m. in. test Wilcoxona, testy chi-kwadrat oraz ogólne modele liniowe (GLM – z ang. Generalised Linear Models)). W rozdziale piątym omówiono wyniki badań i ich interpretację w kontekście istniejącej wcześniej literatury naukowej. W rozdziale szóstym podsumowano pracę, wyciągnięto z niej wnioski oraz zaproponowano perspektywy dalszych badań. 
+Praca składa się z sześciu rozdziałów. W rozdziale drugim omówiono teoretyczne podstawy pracy, tj. przedstawiono czym są koordynacje -- na przykładzie języka polskiego, zaprezentowano zarys teorii zależności składniowej, opisano minimalizację teorii zależności oraz wskazano różne reprezentacje zależnościowe wraz z ich przewidywaniami. W rozdziale trzecim opisano źródło danych, czyli Polish Dependency Bank, jak i ich preprocessing -- działanie algorytmu, napisanego w języku Python, wybierającego koordynacje oraz informacje o nich z PDB, a także pokazano format danych po preprocessingu w pliku z rozszerzeniem ".csv". W rozdziale czwartym zaprezentowano hipotezy badawcze, ich testowanie wraz z analizami statystycznymi w języku R (m. in. test Wilcoxona, testy chi-kwadrat oraz ogólne modele liniowe [GLM – z ang. Generalised Linear Models]). W rozdziale piątym omówiono wyniki badań i ich interpretację w kontekście istniejącej wcześniej literatury naukowej. W rozdziale szóstym podsumowano pracę, wyciągnięto z niej wnioski oraz zaproponowano perspektywy dalszych badań. 
 
 \chapter{Teoretyczne podstawy minimalizacji długości zależności w strukturach współrzędnie złożonych}
 W tym rozdziale omawiam teoretyczne podstawy pracy, tj. reprezentacje koordynacji w języku polskim, teorię zależności składniowej i DLM w koordynacji.
@@ -83,11 +83,46 @@ c. \textit{Byli} ładni, \textbf{ale} głupi.
 d. Nie zrobiłem pracy domowej, \textbf{bo} nie chciałem.
 
 \section{Zarys teorii zależności składniowej}
-
-
-\section{Minimalizacja długości zależności w koordynacji}
 Tekst sekcji
-\section{Co poszczególne reprezentacje przewidują}
+
+\section{Minimalizacja długości zależności}
+Minimalizacja długości zależności (DLM) to zasada, według której języki naturalne dążą do zmniejszania odległości między słowami zależnymi syntaktycznie. Zasada ta jest odnotowywana w lingwistyce już od długiego czasu i pozwala nam na bardziej efektywne analizowanie i generowanie języka naturalnego. W ciągu ostatnich 20 lat hipoteza o nacisku na DLM została wykorzystana do wyjaśnienia wielu z najbardziej uniwersalnych właściwości języków \citep{FutrellEtAl2015}.
+Jak twierdzą \citet{Hawkins1994} i \citet{FutrellEtAl2020}, zachodzi ona zarówno na poziomie gramatycznym, jak i w użyciu języka.
+
+Według DLM, jeśli oba ustawienia członów koordynacji binarnych (jeden człon raz z lewej strony, raz z prawej) są gramatycznie poprawne, to bliżej głowy znajdzie się krótszy człon. W przykładach (3a, 3b) oba ustawienia wydają się brzmieć naturalnie, jednak gdy wydłużymy jeden z członów -- w (3c, 3d), zauważymy, że bardziej naturalne będzie ustawienie krótszego członu z lewej strony.
+\\
+
+(3)
+
+a. \textit{Nie ma} Kamila \textbf{i} Julii.
+
+b. \textit{Nie ma} Julii \textbf{i} Kamila.
+
+c. \textit{Nie ma} Kamila \textbf{i} wiecznie spóźnionej Julii.
+
+d. \textit{Nie ma} wiecznie spóźnionej Julii \textbf{i} Kamila.
+\\
+\\
+\citet{Hawkins1994} argumentuje, że DLM występuje w gramatyce, ale niekoniecznie w użyciu codziennym. Jako powód wskazuje, że w języku angielskim kolejność V-NP-PP (V - czasownik [z ang. verb], NP - fraza rzeczownikowa [z ang. nominal phrase], PP - fraza przyimkowa [z ang. prepositional phrase]) występuje częsciej niż V-PP-NP nie tylko gdy NP jest krótsze od PP, ale i wtedy gdy są podobnej długości. Używa on tego przykładu, ponieważ jest on jednym z tych, które uważa się za ilustrujące występowanie DLM (jako że NP są zazwyczaj krótsze niż PP). Słowa Hawkinsa dla języka angielskiego ilustrują przykłady (4a, 4b), w których kolejność V-NP-PP jest bardziej naturalna niż V-PP-NP), mimo że obie frazy są podobnej długości. Zdanie (4c) również brzmi jednak naturalnie, co wskazuje na pewien wpływ dodatkowego czynnika --  długości różnicy obu członów koordynacji na to, czy DLM będzie w danym przypadku zachowana.
+\\
+
+(4)
+
+a. I gave <a book> <to John>. [Dałem <książkę> <Johnowi>.]
+
+b. I gave <to John> <a book>. [Dałem <Johnowi> <książkę>.]
+
+c. I gave <to John> <the most interesting book I've read in years>. [Dałem <Johnowi> <najbardziej interesującą książkę, jaką przeczytałem od lat>.]\\
+Za: \citet{AnonimoweNieopublikowane}
+\\
+\\
+Jednym ze sposobów na badanie DLM jest tworzenie sztucznych języków losowych (w których kolejność słów, czy relacje zależności są losowo dobierane) oraz porównywanie długości zależności w tych językach z długościami zależności w językach naturalnych. Badania takie wykazały, że języki naturalne mają znacznie krótsze długości zależności niż języki losowe, co sugeruje uniwersalną tendencję do wykorzystywania DLM \citep{Liu2008,Ferrer2014}. 
+
+DLM jest również powiązana z innymi właściwościami języków naturalnych, takimi jak projektywność i finalność głowy. Projektywność oznacza brak lub rzadkość przecinających się zależności, które wydłużają długość zależności. Finalność głowy oznacza kierunek występowania nadrzędnika frazy względem jej dopełnienia. Badania wykazały, że istnieje związek między finalnością głowy a długością zależności, przy czym języki o finalności głowy na końcu zdania mają krótszą długość zależności niż języki o finalności głowy na początku zdania \citep{FutrellEtAl2015}.
+
+DLM nie jest jednak jedynym czynnikiem kształtującym strukturę syntaktyczną języków naturalnych. Istnieją również inne ograniczenia i preferencje, takie jak harmonia głowy, ograniczenia informacyjne czy preferencje semantyczne, które mogą wpływać na kolejność słów i długość zależności. Niektóre z tych czynników mogą być sprzeczne lub komplementarne względem DLM. Dlatego DLM należy rozumieć jako jedną z wielu sił wpływających na organizację języka naturalnego \citep{Temperley2018}.
+
+\section{Różne reprezentacje koordynacji}
 Tekst sekcji
 
 \chapter{Polish Dependency Bank -- źródło danych i narzędzia do analizy}
@@ -130,8 +165,29 @@ Tekst sekcji
 \bibitem [Anonimowe Zgłoszenie na ACL(nieopublikowane)]{AnonimoweNieopublikowane}
 Anonimowe Zgłoszenie na ACL 2023 (nieopublikowane) Conjunct Lengths in English, Dependency Length Minimization, and Dependency Structure of Coordination
 
+\bibitem [Ferrer-i-Cancho \& Liu(2014)]{Ferrer2014}
+Ferrer-i-Cancho, R., Liu, H. (2014). The risks of mixing dependency lengths from sequences of different length. \textit{Glottotheory} 5(2), 143-155. \url{https://doi.org/10.48550/arXiv.1304.3841}
+
+\bibitem [Futrell et al.(2015)]{FutrellEtAl2015}
+Futrell, R., Mahowald, K., Gibson, E. (2015). Large-scale evidence of dependency length minimization in 37 languages. \textit{Proceedings of the National Academy of Sciences} 112(33), 10336–10341. \url{https://doi.org/10.1073/pnas.1502134112}
+
+\bibitem [Futrell et al.(2020)]{FutrellEtAl2020}
+Richard Futrell, Roger P. Levy, and Edward Gibson. 2020. Dependency locality as an explanatory principle for word order. \textit{Language} 96(2), 371–412. Za: Anonimowe Zgłoszenie na ACL 2023 (nieopublikowane) Conjunct Lengths in English, Dependency Length Minimization, and Dependency Structure of Coordination
+
 \bibitem [Haspelmath(2007)]{Haspelmath2007}
-Haspelmath, M. (2007) Coordination, \textit{Language Typology and Syntactic Description, Volume II: Complex constructions}, 1-51
+Haspelmath, M. (2007) Coordination. In T. Shopen (Ed.), \textit{Language typology and syntactic description, Volume II: Complex constructions} (pp. 1-51). Cambridge University Press.
+
+\bibitem [Hawkins(1994)]{Hawkins1994}
+Hawkins, J. A. (1994) A Performance Theory of Or- der and Constituency. \textit{Cambridge University Press}. Za: Anonimowe Zgłoszenie na ACL 2023 (nieopublikowane) Conjunct Lengths in English, Dependency Length Minimization, and Dependency Structure of Coordination
+
+\bibitem [Liu(2008)]{Liu2008}
+Liu, H. (2008). Dependency distance as a metric of language comprehension difficulty. \textit{Journal of Cognitive Science} 9(2), 159–191. \url{https://doi.org/10.17791/jcs.2008.9.2.159}
+
+\bibitem [Shuang et al.(2020)]{Shuang2020}
+Shuang, K., Tan, Y., Cai, Z., \& Sun, Y. (2020). Natural language modeling with syntactic structure dependency. \textit{Information Sciences} 523, 220-233. \url{https://doi.org/10.1016/j.ins.2020.03.031}
+
+\bibitem[Temperley(2018)]{Temperley2018}
+Temperley D. (2018). Minimizing dependency length in phrasal and sentential coordination: A quantitative study of English and German. \textit{Journal of Quantitative Linguistics} 25(3), 223–244. \url{https://doi.org/10.1080/09296174.2017.1390669}
 
 \end{thebibliography}
 
