--- a/praca/main.tex
+++ b/praca/main.tex
@@ -87,7 +87,7 @@ Tekst sekcji
 
 \section{Minimalizacja długości zależności}
 Minimalizacja długości zależności (DLM) to zasada, według której języki naturalne dążą do zmniejszania odległości między słowami zależnymi syntaktycznie. Zasada ta jest odnotowywana w lingwistyce już od długiego czasu i pozwala nam na bardziej efektywne analizowanie i generowanie języka naturalnego. W ciągu ostatnich 20 lat hipoteza o nacisku na DLM została wykorzystana do wyjaśnienia wielu z najbardziej uniwersalnych właściwości języków \citep{FutrellEtAl2015}.
-Jak twierdzą \citet{Hawkins1994} i \citet{FutrellEtAl2020}, zachodzi ona zarówno na poziomie gramatycznym, jak i w użyciu języka.
+Jak twierdzą \citet{Hawkins1994} i \citet{FutrellEtAl2020}, rozróżniamy jej występowanie na poziom gramatyczny, jak i codzienne użycie języka.
 
 Według DLM, jeśli oba ustawienia członów koordynacji binarnych (jeden człon raz z lewej strony, raz z prawej) są gramatycznie poprawne, to bliżej głowy znajdzie się krótszy człon. W przykładach (3a, 3b) oba ustawienia wydają się brzmieć naturalnie, jednak gdy wydłużymy jeden z członów -- w (3c, 3d), zauważymy, że bardziej naturalne będzie ustawienie krótszego członu z lewej strony.
 \\
@@ -116,11 +116,11 @@ c. I gave <to John> <the most interesting book I've read in years>. [Dałem <Joh
 Za: \citet{AnonimoweNieopublikowane}
 \\
 \\
-Jednym ze sposobów na badanie DLM jest tworzenie sztucznych języków losowych (w których kolejność słów, czy relacje zależności są losowo dobierane) oraz porównywanie długości zależności w tych językach z długościami zależności w językach naturalnych. Badania takie wykazały, że języki naturalne mają znacznie krótsze długości zależności niż języki losowe, co sugeruje uniwersalną tendencję do wykorzystywania DLM \citep{Liu2008,Ferrer2014}. 
+Jednym ze sposobów na badanie DLM jest tworzenie sztucznych języków losowych (w których kolejność słów, czy relacje zależności są losowo dobierane) oraz porównywanie długości zależności w tych językach z długościami zależności w językach naturalnych. Badania takie wykazały, że języki naturalne mają znacznie krótsze długości zależności niż języki losowe, co sugeruje, że istnieje uniwersalna tendencja u ludzi do wykorzystywania DLM \citep{Liu2008,Ferrer2014}. 
 
 DLM jest również powiązana z innymi właściwościami języków naturalnych, takimi jak projektywność i finalność głowy. Projektywność oznacza brak lub rzadkość przecinających się zależności, które wydłużają długość zależności. Finalność głowy oznacza kierunek występowania nadrzędnika frazy względem jej dopełnienia. Badania wykazały, że istnieje związek między finalnością głowy a długością zależności, przy czym języki o finalności głowy na końcu zdania mają krótszą długość zależności niż języki o finalności głowy na początku zdania \citep{FutrellEtAl2015}.
 
-DLM nie jest jednak jedynym czynnikiem kształtującym strukturę syntaktyczną języków naturalnych. Istnieją również inne ograniczenia i preferencje, takie jak harmonia głowy, ograniczenia informacyjne czy preferencje semantyczne, które mogą wpływać na kolejność słów i długość zależności. Niektóre z tych czynników mogą być sprzeczne lub komplementarne względem DLM. Dlatego DLM należy rozumieć jako jedną z wielu sił wpływających na organizację języka naturalnego \citep{Temperley2018}.
+DLM nie jest jednak jedynym czynnikiem kształtującym strukturę syntaktyczną języków naturalnych. Istnieją również inne ograniczenia i preferencje, takie jak harmonia głowy, ograniczenia informacyjne czy preferencje semantyczne, które mogą wpływać na kolejność słów i długość zależności. Niektóre z tych czynników mogą być sprzeczne lub komplementarne względem DLM. Dlatego DLM należy rozumieć jako jeden z wielu czynników wpływających na organizację języka naturalnego \citep{Temperley2018}.
 
 \section{Różne reprezentacje koordynacji}
 Tekst sekcji
@@ -163,22 +163,22 @@ Tekst sekcji
 \addcontentsline{toc}{chapter}{Bibliografia}
 
 \bibitem [Anonimowe Zgłoszenie na ACL(nieopublikowane)]{AnonimoweNieopublikowane}
-Anonimowe Zgłoszenie na ACL 2023 (nieopublikowane) Conjunct Lengths in English, Dependency Length Minimization, and Dependency Structure of Coordination
+Anonimowe Zgłoszenie na ACL 2023 (nieopublikowane). Conjunct Lengths in English, Dependency Length Minimization, and Dependency Structure of Coordination
 
 \bibitem [Ferrer-i-Cancho \& Liu(2014)]{Ferrer2014}
 Ferrer-i-Cancho, R., Liu, H. (2014). The risks of mixing dependency lengths from sequences of different length. \textit{Glottotheory} 5(2), 143-155. \url{https://doi.org/10.48550/arXiv.1304.3841}
 
 \bibitem [Futrell et al.(2015)]{FutrellEtAl2015}
-Futrell, R., Mahowald, K., Gibson, E. (2015). Large-scale evidence of dependency length minimization in 37 languages. \textit{Proceedings of the National Academy of Sciences} 112(33), 10336–10341. \url{https://doi.org/10.1073/pnas.1502134112}
+Futrell, R., Mahowald, K., \& Gibson, E. (2015). Large-scale evidence of dependency length minimization in 37 languages. \textit{Proceedings of the National Academy of Sciences} 112(33), 10336–10341. \url{https://doi.org/10.1073/pnas.1502134112}
 
 \bibitem [Futrell et al.(2020)]{FutrellEtAl2020}
-Richard Futrell, Roger P. Levy, and Edward Gibson. 2020. Dependency locality as an explanatory principle for word order. \textit{Language} 96(2), 371–412. Za: Anonimowe Zgłoszenie na ACL 2023 (nieopublikowane) Conjunct Lengths in English, Dependency Length Minimization, and Dependency Structure of Coordination
+Futrell, R., Levy R. P., \& Gibson, E. (2020). Dependency locality as an explanatory principle for word order. \textit{Language} 96(2), 371–412. Za: Anonimowe Zgłoszenie na ACL 2023 (nieopublikowane). Conjunct Lengths in English, Dependency Length Minimization, and Dependency Structure of Coordination
 
 \bibitem [Haspelmath(2007)]{Haspelmath2007}
-Haspelmath, M. (2007) Coordination. In T. Shopen (Ed.), \textit{Language typology and syntactic description, Volume II: Complex constructions} (pp. 1-51). Cambridge University Press.
+Haspelmath, M. (2007). Coordination. In T. Shopen (Ed.), \textit{Language typology and syntactic description, Volume II: Complex constructions} (pp. 1-51). Cambridge University Press.
 
 \bibitem [Hawkins(1994)]{Hawkins1994}
-Hawkins, J. A. (1994) A Performance Theory of Or- der and Constituency. \textit{Cambridge University Press}. Za: Anonimowe Zgłoszenie na ACL 2023 (nieopublikowane) Conjunct Lengths in English, Dependency Length Minimization, and Dependency Structure of Coordination
+Hawkins, J. A. (1994). A Performance Theory of Or- der and Constituency. \textit{Cambridge University Press}. Za: Anonimowe Zgłoszenie na ACL 2023 (nieopublikowane). Conjunct Lengths in English, Dependency Length Minimization, and Dependency Structure of Coordination
 
 \bibitem [Liu(2008)]{Liu2008}
 Liu, H. (2008). Dependency distance as a metric of language comprehension difficulty. \textit{Journal of Cognitive Science} 9(2), 159–191. \url{https://doi.org/10.17791/jcs.2008.9.2.159}
@@ -187,7 +187,7 @@ Liu, H. (2008). Dependency distance as a metric of language comprehension diffic
 Shuang, K., Tan, Y., Cai, Z., \& Sun, Y. (2020). Natural language modeling with syntactic structure dependency. \textit{Information Sciences} 523, 220-233. \url{https://doi.org/10.1016/j.ins.2020.03.031}
 
 \bibitem[Temperley(2018)]{Temperley2018}
-Temperley D. (2018). Minimizing dependency length in phrasal and sentential coordination: A quantitative study of English and German. \textit{Journal of Quantitative Linguistics} 25(3), 223–244. \url{https://doi.org/10.1080/09296174.2017.1390669}
+Temperley, D. (2018). Minimizing dependency length in phrasal and sentential coordination: A quantitative study of English and German. \textit{Journal of Quantitative Linguistics} 25(3), 223–244. \url{https://doi.org/10.1080/09296174.2017.1390669}
 
 \end{thebibliography}
 
